--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ body {
 
 body {
   background-color: #edf3f8;
-  background-image: url("../img/hero-bg.png");
+  background-image: url("../img/body-bg.png");
   background-size: 780px 780px;
   background-repeat: no-repeat;
   background-position: calc(50% + 500px) -200px;
@@ -945,6 +945,8 @@ body {
   height: 284px;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 48px;
 }
 
 .easy__right {
@@ -971,10 +973,61 @@ body {
   margin-bottom: 60px;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1040px) {
+  .easy__right {
+    margin-right: 10px;
+  }
+}
+@media only screen and (max-width: 970px) {
+  .easy__right {
+    margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 950px) {
   .easy__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  .easy__img {
+    width: 390px;
+    height: 250px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .easy__right {
+    text-align: center;
+    max-width: 573px;
+    margin-right: 0px;
+  }
+  .easy__text {
+    margin-bottom: 0px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .easy {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .easy__img {
+    width: 328px;
+    height: 209px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .easy__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .easy__img {
+    width: 250px;
+    height: 189px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .easy__title {
+    font-size: 36px;
+    line-height: 36px;
   }
 }/*# sourceMappingURL=main.css.map */
