--- a/scss/blocks/_body.scss
+++ b/scss/blocks/_body.scss
@@ -1,6 +1,6 @@
 body{
   background-color: $bgcolor;
-  background-image: url("../img/hero-bg.png");
+  background-image: url("../img/body-bg.png");
   background-size: 780px 780px;
   background-repeat: no-repeat;
   background-position: calc(50% + 500px) -200px;
