--- a/scss/blocks/_easy.scss
+++ b/scss/blocks/_easy.scss
@@ -11,6 +11,8 @@
   width: 445px;
   height: 284px;
   object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 48px;
 }
 
 .easy__right{
@@ -34,10 +36,65 @@
   color: #6c8294;
   margin-bottom: 60px;
 }
+@include reponsive(1040px){
+  .easy__right{
+    margin-right: 10px;
+  }
+  
+}
 
-@include reponsive(900px){
+@include reponsive(970px){
+  .easy__right{
+    margin-right: 0px;
+  }
+  
+}
+@include reponsive(950px){
   .easy__inner{
-    fle
+   flex-direction: column;
+   text-align: center;
+  }
+  .easy__img{
+    width: 390px;
+    height: 250px;
+    object-fit: cover;
+  }
+  .easy__right{
+    text-align: center;
+    max-width: 573px;
+    margin-right: 0px;
+  }
+  .easy__text{
+    margin-bottom: 0px;
+  }
+}
+@include reponsive(450px){
+  .easy{
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .easy__img{
+    width: 328px;
+    height: 209px;
+    object-fit: cover;
   }
 
+  .easy__title{
+    font-size: 36px;
+    line-height: 36px;
+  }
+ 
+}
+@include reponsive(350px){
+  .easy__img{
+    width: 250px;
+    height: 189px;
+    object-fit: cover;
+  }
+
+  .easy__title{
+    font-size: 36px;
+    line-height: 36px;
+ 
+  }
 }
