simple section responsive

--- a/css/main.css
+++ b/css/main.css
@@ -790,7 +790,7 @@ body {
 }
 
 .intro__title {
-  font-family: "DM Serif Display";
+  font-family: "DM Serif Display", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
@@ -931,7 +931,6 @@ body {
 }
 .easy {
   padding-top: 150px;
-  padding-bottom: 150px;
 }
 
 .easy__inner {
@@ -955,7 +954,7 @@ body {
 }
 
 .easy__title {
-  font-family: "DM Serif Display";
+  font-family: "DM Serif Display", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
@@ -1006,7 +1005,6 @@ body {
 @media only screen and (max-width: 450px) {
   .easy {
     padding-top: 80px;
-    padding-bottom: 80px;
   }
   .easy__img {
     width: 328px;
@@ -1029,5 +1027,97 @@ body {
   .easy__title {
     font-size: 36px;
     line-height: 36px;
+  }
+}
+.simple {
+  padding-top: 150px;
+  background-image: url("../img/simple-bg.png");
+  background-repeat: no-repeat;
+  background-size: 650px 650px;
+  background-position: calc(50% + 570px) center;
+}
+
+.simple__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.simple__left {
+  max-width: 445px;
+}
+
+.simple__title {
+  font-family: "DM Serif Display", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: -0.4px;
+  color: #36536b;
+  margin-bottom: 24px;
+}
+
+.simple__text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  color: #6c8294;
+}
+
+.simple__right {
+  margin-right: 50px;
+}
+
+.simple__img {
+  width: 556px;
+  height: 500px;
+}
+
+@media only screen and (max-width: 1050px) {
+  .simple__right {
+    margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .simple {
+    background: none;
+  }
+  .simple__inner {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .simple__left {
+    max-width: 573px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .simple {
+    padding-top: 80px;
+  }
+  .simple__right {
+    margin-left: 20px;
+  }
+  .simple__img {
+    width: 363px;
+    height: 320px;
+  }
+  .simple__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .simple__left {
+    max-width: 328px;
+  }
+  .simple__img {
+    width: 328px;
+    height: 290px;
+  }
+}
+@media only screen and (max-width: 315px) {
+  .simple__right {
+    margin-left: 8%;
   }
 }/*# sourceMappingURL=main.css.map */
