--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -16,7 +16,7 @@
   max-width: 450px;
 }
 .intro__title{
-  font-family: 'DM Serif Display';
+  font-family: 'DM Serif Display', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
