--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,4 +1,4 @@
-@mixin reponsive($max-width) {
+@mixin responsive($max-width) {
   @media only screen and (max-width:$max-width) {
     @content;
   }
