--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -57,6 +57,12 @@
   margin: auto;
   cursor: pointer;
 }
+.hero__button:hover{
+  background-color: #da6d97;
+}
+.hero__button:active{
+  opacity: 0.7;
+}
 .hero__link{
   display: inline-block;
   font-weight: 400;
@@ -145,7 +151,7 @@
 
  
 }
-@include responsive(450px){
+@include responsive(550px){
     .hero__right{
       margin-bottom: 24px;
     }
