--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -31,23 +31,22 @@
   margin-left: 103px;
 }
 
-.footer__item+.footer__item {
+.footer__item + .footer__item {
   margin-left: 33px;
 }
 
-.footer__link {
-  font-style: normal;
+.footer__link {  
   font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  letter-spacing: 0.923077px;
-  text-transform: uppercase;
-  color: #83888f;
+  font-size: 15px;
+  line-height: 18px;
+  color: #FBFCFE;
+  opacity: 0.7;
   transition: all 0.3s ease;
 }
 
 .footer__link:hover {
   color: #ffffff;
+  opacity: 1;
 }
 
 .footer__link:active {
