--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
   background-color:#1b262f;
   padding: 31px 0px;
-  background-image: url("../../img/footer-bg.png");
+  background-image: url("../img/footer-bg.png");
   background-repeat: no-repeat;
   background-size: 780px 780px;
   background-position: calc(50% + 650px) -100px;
@@ -28,11 +28,11 @@
 .footer__list {
   display: flex;
   align-items: center;
-  margin-left: 103px;
+  margin-left: 60px;
 }
 
 .footer__item + .footer__item {
-  margin-left: 33px;
+  margin-left: 40px;
 }
 
 .footer__link {  
