--- a/css/main.css
+++ b/css/main.css
@@ -1528,6 +1528,10 @@ body {
   fill: #da6d97;
 }
 
+.footer__right-link:active > .icons > path {
+  opacity: 0.7;
+}
+
 @media only screen and (max-width: 950px) {
   .footer {
     background-position: calc(50% + 290px) -100px;
