--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -65,6 +65,9 @@
 .footer__right-link:hover>.icons>path {
   fill:#da6d97;
 }
+.footer__right-link:active>.icons>path {
+  opacity: 0.7;
+}
 @include responsive(950px){
   .footer{
     background-position: calc(50% + 290px) -100px;
